package core

import (
	"context"
	"fmt"
	"go-nexus/internal/model/dto"
	"log"
	"time"

	// ğŸ‘‡ è¿™é‡Œå¿…é¡»å¯¹åº”ä½  go.mod é‡Œçš„æ¨¡å—å + è·¯å¾„
	pb "go-nexus/internal/api/proto"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

var AIClient pb.AIServiceClient

// InitAIClient è¿æ¥ Python æœåŠ¡
func InitAIClient() {
	// è¿æ¥æœ¬åœ° Python æœåŠ¡ç«¯å£
	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("âŒ æ— æ³•è¿æ¥ AI æœåŠ¡: %v", err)
	}

	AIClient = pb.NewAIServiceClient(conn)
	log.Println("âœ… AI æœåŠ¡è¿æ¥æˆåŠŸ (gRPC)")
}

// GetSessionID è¾…åŠ©å·¥å…·ï¼Œç”Ÿæˆä¼šè¯ID
func GetSessionID(chatType int, fromID, toID uint) string {
	if chatType == dto.ChatTypeGroup { //ç¾¤èŠ
		return fmt.Sprintf("g_%d", toID) //toIDå°±æ˜¯groupID
	}
	if fromID < toID {
		return fmt.Sprintf("p_%d_%d", fromID, toID)
	}
	return fmt.Sprintf("p_%d_%d", toID, fromID)
}

// AsyncSyncMessage å¼‚æ­¥æŠŠæ¶ˆæ¯æ¨ç»™ AI (ä¸é˜»å¡ä¸»æµç¨‹)
func AsyncSyncMessage(userID uint, content string, msgID string, nickname string, sessionID string) {
	go func() {
		// è®¾ç½® 5 ç§’è¶…æ—¶
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()

		_, err := AIClient.SyncMessage(ctx, &pb.SyncRequest{
			UserId:    uint32(userID),
			Content:   content,
			MsgId:     msgID,
			Nickname:  nickname,
			SessionId: sessionID,
		})
		if err != nil {
			log.Printf("âš ï¸ AI åŒæ­¥å¤±è´¥: %v", err)
		}
	}()
}

// ChatSummary åŒæ­¥è°ƒç”¨ AI ç”Ÿæˆæ‘˜è¦
func ChatSummary(chats []string) (string, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second) // æ‘˜è¦ç”Ÿæˆå¯èƒ½è¾ƒæ…¢
	defer cancel()

	resp, err := AIClient.ChatSummary(ctx, &pb.SummaryRequest{
		Chats: chats,
	})
	if err != nil {
		return "", err
	}
	return resp.Summary, nil
}

// GetReplySuggestions è·å–å›å¤å»ºè®®
func GetReplySuggestions(chats []string, myName string) ([]string, error) {
	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	resp, err := AIClient.SuggestReply(ctx, &pb.SuggestRequest{
		RecentMessages: chats,
		MyName:         myName,
	})
	if err != nil {
		return nil, err
	}
	return resp.Suggestions, nil
}

// AsyncRevokeMessage å¼‚æ­¥æ’¤å›æ¶ˆæ¯
func AsyncRevokeMessage(userID uint, msgID string) {
	go func() {
		ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
		defer cancel()

		_, err := AIClient.RevokeMessage(ctx, &pb.RevokeRequest{
			UserId: uint32(userID),
			MsgId:  msgID,
		})
		if err != nil {
			log.Printf("âš ï¸ AI æ’¤å›å¤±è´¥: %v", err)
		}
	}()
}
